--- a/monkey trail.html
+++ b/monkey trail.html
@@ -20,9 +20,9 @@
                 <p>Learn and entertained.Come and catch daily and educational and entertaining shows,tal demonstrations at monkey trail.</p>
                  <p>Today's program</p>
                  <ul>
-                     <li>9h00am  : Monkey show</li>
-                     <li>11h00am : Monkey feeding</li>
-                     <li>14h00   : Monkey picturfes</li>
+                     <li>09h00am  : Monkey show</li>
+                     <li>11h00am  : Monkey feeding</li>
+                     <li>14h00pm  : Monkey picturfes</li>
                  </ul>
                  <p>WHERE WILL YOU FIND IT?</p>
                  <p>The monkey trail is to the south of the main entrance.</p>
