--- a/monkey trail.html
+++ b/monkey trail.html
@@ -22,7 +22,7 @@
                  <ul>
                      <li>09h00am  : Monkey show</li>
                      <li>11h00am  : Monkey feeding</li>
-                     <li>14h00pm  : Monkey picturfes</li>
+                     <li>14h00pm  : Monkey pictures</li>
                  </ul>
                  <p>WHERE WILL YOU FIND IT?</p>
                  <p>The monkey trail is to the south of the main entrance.</p>
