--- a/out door restaurant.html
+++ b/out door restaurant.html
@@ -20,9 +20,9 @@
                 <p>Enjoy our delicious and health food.</p>
                  <p>Today's program</p>
                  <ul>
-                     <li>9h00am  : Breakfast</li>
-                     <li>11h00am : Free drink</li>
-                     <li>14h00   : lunch</li>
+                     <li>09h00am   : Breakfast</li>
+                     <li>11h00am   : Free drink</li>
+                     <li>14h00pm   : lunch</li>
                  </ul>
                  <p>WHERE WILL YOU FIND IT?</p>
                  <p>The out door restaurant is the center of the main entrance.</p>
