--- a/coffee shop.html
+++ b/coffee shop.html
@@ -15,7 +15,7 @@
         <div id="main">
         <div id="content">
              <div id="info-box-full">
-            <img src="images/coffee-shop-tn.png"/>
+            <img src="images/coffee-shop.jpg"/>
             <h3>COFFEE SHOP</h3>
                 <p>Enjoy your strong coffee with some happy faces on it</p>
                  <p>Today's program</p>
