--- a/coffee-shop.html
+++ b/coffee-shop.html
@@ -20,9 +20,9 @@
                 <p>Enjoy your strong coffee with some happy faces on it</p>
                  <p>Today's program</p>
                  <ul>
-                     <li>9h00am  : Welcoming</li>
-                     <li>11h00am : Coffee Show</li>
-                     <li>14h00   : Happy hour</li>
+                     <li>09h00am    : Welcoming</li>
+                     <li>11h00am    : Coffee Show</li>
+                     <li>14h00pm    : Happy hour</li>
                  </ul>
                  <p>WHERE WILL YOU FIND IT?</p>
                  <p>The Coffee Shop is to the East of the main entrance.</p>
