--- a/insert-house.html
+++ b/insert-house.html
@@ -20,9 +20,9 @@
                 <p>Learn and entertained.Come and catch daily and educational andentertaining shows,tal demonstrations at Insert house.</p>
                  <p>Today's program</p>
                  <ul>
-                     <li>9h00am  : Short story about the area </li>
-                     <li>11h00am : Insert house history</li>
-                     <li>14h00   : Pictures</li>
+                     <li>09h00am    : Short story about the area </li>
+                     <li>11h00am    : Insert house history</li>
+                     <li>14h00pm    : Pictures</li>
                  </ul>
                  <p>WHERE WILL YOU FIND IT?</p>
                  <p>The insert house is to the north of the main entrance.</p>
