--- a/amphitheatre.html
+++ b/amphitheatre.html
@@ -20,9 +20,9 @@
                 <p>Learn and entertained.Come and catch daily and educational andentertaining shows,tal demonstrations at amphitheatre club.</p>
                  <p>Today's program</p>
                  <ul>
-                     <li>9h00am  : A Bug's life - play</li>
-                     <li>11h00am : Penny and her penguins</li>
-                     <li>14h00   : Bigs cats of Africa - a Documentary</li>
+                     <li>09h00am    : A Bug's life - play</li>
+                     <li>11h00am    : Penny and her penguins</li>
+                     <li>14h00pm    : Bigs cats of Africa - a Documentary</li>
                  </ul>
                  <p>WHERE WILL YOU FIND IT?</p>
                  <p>The amphithreatre is to the west of the main entrance.</p>
