--- a/lost forest.html
+++ b/lost forest.html
@@ -20,9 +20,9 @@
                 <p>Learn and entertained.Come and catch daily and educational and entertaining shows,tal demonstrations at lost forest .</p>
                  <p>Today's program</p>
                  <ul>
-                     <li>9h00am  : A Bug's life - play</li>
-                     <li>11h00am : Penny and her penguins</li>
-                     <li>14h00   : Bigs cats of Africa - a Documentary</li>
+                     <li>09h00am   : A Bug's life - play</li>
+                     <li>11h00am   : Penny and her penguins</li>
+                     <li>14h00pm   : Bigs cats of Africa - a Documentary</li>
                  </ul>
                  <p>WHERE WILL YOU FIND IT?</p>
                  <p>The lost forest is to the back  of the main entrance.</p>
