--- a/pizza-shop.html
+++ b/pizza-shop.html
@@ -20,9 +20,9 @@
                 <p>Best pizza,best value.Better ingredients.</p>
                  <p>Today's program</p>
                  <ul>
-                     <li>9h00am  : Pizza play show</li>
-                     <li>11h00am : Free drink of your choice</li>
-                     <li>14h00   : Pizza happy hour</li>
+                     <li>09h00am  : Pizza play show</li>
+                     <li>11h00am  : Free drink of your choice</li>
+                     <li>14h00pm  : Pizza happy hour</li>
                  </ul>
                  <p>WHERE WILL YOU FIND IT?</p>
                  <p>The Pizza shop is opposite out door restaurant.</p>
