--- a/amphitheatre.html
+++ b/amphitheatre.html
@@ -20,23 +20,24 @@
                 <p>Learn and entertained.Come and catch daily and educational andentertaining shows,tal demonstrations at amphitheatre club.</p>
                  <p>Today's program</p>
                  <ul>
-<<<<<<< HEAD
+
                      <li>09h00am    : A Bug's life - play</li>
                      <li>11h00am    : Penny and her penguins</li>
                      <li>14h00pm    : Bigs cats of Africa - a Documentary</li>
-=======
+
                      <li>09h00am   : A Bug's life - play</li>
                      <li>11h00am   : Penny and her penguins</li>
                      <li>14h00pm   : Bigs cats of Africa - a Documentary</li>
->>>>>>> 4f9a4734bfc095a3f244502f4de66d6b95ba2267
+
                  </ul>
                  <p>WHERE WILL YOU FIND IT?</p>
                  <p>The amphithreatre is to the west of the main entrance.</p>
             </div>
          </div>
      </div>
-        
-            <a href="index.html">Back</a>        
+            <div id="bottom-tabs">
+            <a href="weather.html">WEATHER</a>
+            <a href="feedback.html">FEEDBACK</a>    
         </div>
     </body>
 </html>
