--- a/feedback.html
+++ b/feedback.html
@@ -24,10 +24,9 @@
             </div>
          </div>
      </div>
-        
-            <div id="bottom-tabs">   
+        <div id="tabs-bottom">
              <a href="weather.html">WEATHER</a>
-            <a href="feedback.html">FEEDBACK</a> 
+            <a href="feedback.html">FEEDBACK</a>        
         </div>
     </body>
 </html>
