--- a/message-received.html
+++ b/message-received.html
@@ -24,7 +24,8 @@
          </div>
      </div>
         <div id="tabs-bottoms">
-            <a href="index.html">WEATHER</a>        
+             <a href="weather.html">WEATHER</a>
+            <a href="feedback.html">FEEDBACK</a>      
         </div>
     </body>
 </html>
