--- a/insert-house.html
+++ b/insert-house.html
@@ -30,7 +30,9 @@
          </div>
      </div>
         
-            <a href="index.html">Back</a>        
+            <div id="bottom-tabs">
+             <a href="weather.html">WEATHER</a>
+            <a href="feedback.html">FEEDBACK</a>
         </div>
     </body>
 </html>
