--- a/monkey-trail.html
+++ b/monkey-trail.html
@@ -15,22 +15,18 @@
         <div id="main">
         <div id="content">
              <div id="info-box-full">
-            <img src="images/monkey-trail.jpg"/>
-            <h3>MONKEY TRAIL</h3>
-                <p>Learn and entertained.Come and catch daily and educational and entertaining shows,tal demonstrations at monkey trail.</p>
-                 <p>Today's program</p>
-                 <ul>
-                     <li>09h00am  : Monkey show</li>
-                     <li>11h00am  : Monkey feeding</li>
-                     <li>14h00pm  : Monkey picturfes</li>
-                 </ul>
-                 <p>WHERE WILL YOU FIND IT?</p>
-                 <p>The monkey trail is to the south of the main entrance.</p>
+            <img src="images/monkey.jpg"/>
+            <h3>MONKEY</h3>
+                 <p>Monkeys live in the trees,glasslands,mountains,forests, and on high plains.A group of Monkeys is called a troop of which you will be lucky to meet them here.Most primates share six basic features:forward-facing eyes,eye sockets,grsping hands,nails,fingerprints,and large brains.Monkeys are most easily distinguished from apes by their tails.</p>
+                 <p>Most monkeys live in the tropical rainforests of Asia,Africa.</p><strong><p>WHERE WILL YOU FIND THEM</p></strong>
+            <P>You will find the monkeys at pen D22,right next to the ampitheatre</P>
             </div>
-         </div>
-     </div>
-        
-            <a href="index.html">Back</a>        
+                  
+            </div>
+        </div>
+        <div id="tabs-bottom">
+            <a href="feedback.html">WEATHER</a>
+            <a href="feedback.html">FEEDBACK</a>        
         </div>
     </body>
-</html>
+</html
