--- a/amphitheatre.html
+++ b/amphitheatre.html
@@ -17,27 +17,21 @@
              <div id="info-box-full">
             <img src="images/garden-amphitheater.jpg"/>
             <h3>AMPHITHREATRE</h3>
-                <p>Learn and entertained.Come and catch daily and educational andentertaining shows,tal demonstrations at amphitheatre club.</p>
+                <p>Learn and entertained.Come and catch daily and educational and entertaining shows,tal demonstrations at amphitheatre club.</p>
                  <p>Today's program</p>
                  <ul>
-
-                     <li>09h00am    : A Bug's life - play</li>
-                     <li>11h00am    : Penny and her penguins</li>
-                     <li>14h00pm    : Bigs cats of Africa - a Documentary</li>
-
                      <li>09h00am   : A Bug's life - play</li>
                      <li>11h00am   : Penny and her penguins</li>
                      <li>14h00pm   : Bigs cats of Africa - a Documentary</li>
-
                  </ul>
                  <p>WHERE WILL YOU FIND IT?</p>
                  <p>The amphithreatre is to the west of the main entrance.</p>
             </div>
          </div>
      </div>
-            <div id="bottom-tabs">
+        <div id="tabs-bottom">
             <a href="weather.html">WEATHER</a>
-            <a href="feedback.html">FEEDBACK</a>    
+            <a href="feedback.html">FEEDBACK</a>     
         </div>
     </body>
 </html>
