--- a/insert-house.html
+++ b/insert-house.html
@@ -30,9 +30,9 @@
          </div>
      </div>
         
-            <div id="bottom-tabs">
-             <a href="weather.html">WEATHER</a>
-            <a href="feedback.html">FEEDBACK</a>
+              <div id="tabs-bottom">
+            <a href="weather.html">WEATHER</a>
+            <a href="feedback.html">FEEDBACK</a>        
         </div>
     </body>
 </html>
