--- a/out-door-restaurant.html
+++ b/out-door-restaurant.html
@@ -29,10 +29,9 @@
             </div>
          </div>
      </div>
-        
-            <div id="bottom-tabs" >
-             <a href="weather.html">WEATHER</a>
-            <a href="feedback.html">FEEDBACK</a>
+                <div id="tabs-bottom">
+            <a href="weather.html">WEATHER</a>
+            <a href="feedback.html">FEEDBACK</a>        
         </div>
     </body>
 </html>
